WISH: kick out xpm.C, replace by pixbuf
DUMB: support tex fonts

8.
	- nuke reconf script, serves no purpose anymore.
        - do not process focus events caused by grabs
          (patch by Mikachu).
        - better option handling, support more than 30 options (exg).
        - add urgentOnBell resource to set the urgency hint
          (patch by Philip Paeps).

8.2  Sat Feb 17 21:35:28 CET 2007
	- fix make depend in src/, reported by exg.
        - fixed typo in urxvt::GET_CUSTOM, causing the result to be wrong.
          (patch by Sergey Vlasov).
        - unbundled iom perl interface somewhat.
        - scrollbar-xterm now uses the selected scrollColor instead of fg
          (found by Aiviru).
        - disabled linux kernel bug workaround again: disabling it gives
          a 50% speed hit on affected machines, while enabling it gives
          a similar speed hit to screen, which is likely the more common
          case to work around for :/
        - urxvt::rend2mask perl function, and utilization of it by matcher
          (patch by Moshe Kamensky).
        - use perl:matcher on a keysym to open most recently displayed URL.
        - with matcher, when multiple patterns match, last wins, not first.
        - fix make and make install with srcdir != builddir.
        - updated bundled libptytty to fix a bug where the tty would be kept
          open (see the libptytty ChangeLog for details).
        - delay setting the IUTF8 flag to after the tty settings have been
          set so its value does not get lost (reported and analysed by Andrei
          Paskevich).
        - rip out support for obsolete sgtty.h interface.
        - rip out support for non-POSIX termios variants.
        - update libptytty.
        - update iom.C, make it call ptytty::sanitise_stdfd on init.
        - when !XFT, change rounding of colours to use a less correct formula to
          meet user expectancies (#aaa becomes #a000a000a000 not #9f9f9f9f9f9f).